--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {"version": 2,
 "bulids": [
  {
-"src": "./weatherapp/index.js",
+"src": "./weatherApp/index.js",
 "use":"@vercel/node}
  ],
 "routes" :[
